# differentiable_gaussian_mixture_renderer

./: .clangd  .gitignore  CMakeLists.txt
experiments/: activation.py  fit_gm_lin_mass_based.nb  gaussian_self_shadowing.nb  volume_integration.py
python_bindings/: compile_flags.py  util.py  vol_marcher.cpp  vol_marcher.cu  vol_marcher.h  vol_marcher.py
src/: CMakeLists.txt
src/dgmr/: constants.h  forward.cu  forward.h  marching_steps.h  math.h  piecewise_linear.h  raster_bin_sizers.h  sibr_api.cu  sibr_api.h  sibr_interfaces.cpp  sibr_interfaces.h  splat_forward.cu  splat_forward.h  types.h  util.h  utils.h  vol_marcher.cu  vol_marcher.h  vol_marcher_backward.cu  vol_marcher_backward.h  vol_marcher_forward.cu  vol_marcher_forward.h  vol_raster_forward.cu  vol_raster_forward.h
src/dgmr/grad/: marching_steps.h  math.h  utils.h
unittests/: CMakeLists.txt  gaussian_bounds.cpp  grad_inria_splatter_render.cu  grad_marching_steps.cu  grad_math.cu  grad_utils.cu  main.cpp  marching_steps.cpp  math.cpp  piecewise_linear.cpp  raster_bin_sizer.cpp  unit_test_utils.h  utils.cpp
